# SatSolver

a0/: README.md  user.yml
bonus/: CMakeLists.txt  Makefile  a.out  bonus  bonus.cc  bonus.d  dpll.cc  dpll.d  dpll.h  parser.h  tokenizer.cc  tokenizer.d  treeNode.h  tseitinTransformer.h
bonus/test/: bonus_test2.out  test2.in
pa1/: main.cc  parser.cc  tokenizer.cc  treeNode.cc  treeNode.h
pa1/test/: test(1).in  test(1)_your.out  test2.in  test2.out  test3.in  test3_your.out  test4.in  test4.out  test4_your.out  test5.in  test5.out  test6.in  test6_your.out  test7.in  test7_your.out
pa2/: CMakeLists.txt  Makefile  main.d  pa2.cc  parser.cc  satSolver.cc  tokenizer.h  tseitinTransformer.cc
pa2/test/: mytest0.out  test3.in  test3.out
sample-code/arrays/: arr1.cpp  arr2.cpp
sample-code/binary-trees/: bt-delete.cpp
sample-code/function-template/: function-template.cpp
sample-code/graph/: graph.cpp
sample-code/inheritance/: inherit1.cpp  inherit2.cpp
sample-code/linkedlist/: delete1.cpp  insert.cpp  ll1.cpp
sample-code/minisat-example/: CMakeLists.txt
sample-code/polymorphism-virtualfunctions/: function-overloading.cpp
